<resources>
    <string name="app_name">HTCS-Enrollment System</string>
    <string name="open">Open Navigation</string>
    <string name="close">Close Navigation</string>
    <string name="account">Account</string>
    <string name="create_account">Create Account</string>
    <string name="manage_account">Manage Account</string>
    <string name="offerings">Offerings</string>
    <string name="curriculum">Curriculum</string>
    <string name="schedule">Schedule</string>
    <string name="pre_requisites">Pre-requisites</string>
    <string name="co_requisites">Co-requisites</string>
    <string name="grade_entry_schedule">Grade Entry Schedule</string>
    <string name="fees_management">Fees Management</string>
    <string name="assessment_management">Assessment Management</string>
    <string name="discount_management">Discount Management</string>
    <string name="payments">Payments</string>
    <string name="payment_transaction">Payment Transaction</string>
    <string name="payment_management">Payment Management</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="htcs">Holy Trinity College Seminary Foundation Inc.</string>
    <string name="dashboard">Dashboard</string>
    <string name="board_lodging"><![CDATA[Board & Lodging]]></string>
    <string name="reg_misc"><![CDATA[Reg. & Misc.]]></string>
    <string name="term_course_no"><![CDATA[Term & Course No.]]></string>


    <string-array name="sec_items">
        <item> </item>
        <item>1A</item>
        <item>2A</item>
        <item>3A</item>
        <item>4A</item>
    </string-array>

    <string-array name="sem_items">
        <item> </item>
        <item>1st Semester</item>
        <item>2nd Semester</item>

    </string-array>

    <string-array name="year_items">
        <item> </item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
    </string-array>

    <string-array name="certificate_spinner">
        <item>Choose a type of sertificate </item>
        <item>COR</item>
        <item>TOR</item>
    </string-array>
</resources>